@@ -1,6 +1,14 @@
+Makefile.in
+Makefile
+*.o
+*~
+*.a
+*.la
+*.lo
+.deps
+.libs
 *.bat
 *.exe
-*.o
 *.BKP
 usecode
 usecode.old
